Update GPT Sentence Transformer and FAISS example 2.ipynb

--- a/SentenceTransformersAndFAISS/GPT Sentence Transformer and FAISS example 2.ipynb
+++ b/SentenceTransformersAndFAISS/GPT Sentence Transformer and FAISS example 2.ipynb
@@ -557,7 +557,8 @@
     "#         question_embedding = model.encode(question, convert_to_tensor=True)        \n",
     "        \n",
     "        topic_question = \"Is the document related to \" + title\n",
-    "        print('\\tIs the document related to ', topic_names[idx])\n",
+    "        topic_name = topic_names[idx]\n",
+    "        print('\\tIs the document related to ', topic_name)\n",
     "        topic_embedding = model.encode(topic_question, convert_to_tensor=True)\n",
     "#         print('\\t\\tdoc_embeddings.shape', doc_embeddings.shape)\n",
     "#         print('\\t\\ttopic_embedding.shape', topic_embedding.shape)\n",
