Initial ML-CHAMP code for testing pipeline options

--- a/SentenceTransformersAndFAISS/GPT Sentence Transformer and FAISS example 4.ipynb
+++ b/SentenceTransformersAndFAISS/GPT Sentence Transformer and FAISS example 4.ipynb
@@ -14,26 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "bdfbe24a",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\Hugh\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "D:\\ProgramData\\Anaconda3\\envs\\transformers_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
    "source": [
     "import faiss\n",
+    "import json\n",
     "import numpy as np\n",
     "import torch\n",
     "from torch import Tensor\n",
@@ -266,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "1ac84f1c",
    "metadata": {
     "scrolled": false
@@ -312,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "9cc880ac",
    "metadata": {},
    "outputs": [
@@ -320,56 +327,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sentence_embeddings.shape torch.Size([42, 768])\n",
-      "Length of the index: 42\n",
-      "sentence_embeddings.shape torch.Size([43, 768])\n",
-      "Length of the index: 85\n",
-      "sentence_embeddings.shape torch.Size([110, 768])\n",
-      "Length of the index: 195\n",
-      "sentence_embeddings.shape torch.Size([101, 768])\n",
-      "Length of the index: 296\n",
-      "sentence_embeddings.shape torch.Size([134, 768])\n",
-      "Length of the index: 430\n",
-      "sentence_embeddings.shape torch.Size([338, 768])\n",
-      "Length of the index: 768\n",
-      "sentence_embeddings.shape torch.Size([63, 768])\n",
-      "Length of the index: 831\n",
+      "Loaded index from doc_index.index\n",
+      "Loaded sentence_to_index_mapping from sentence_to_index_mapping.json\n",
       "Final length of the index: 831\n"
      ]
     }
    ],
    "source": [
-    "# Populate the index and track the sentence ids and locations\n",
-    "index = faiss.IndexFlatL2(768)  # Create an index\n",
-    "# Maintain a mapping between sentence embeddings' index and their original sentences\n",
-    "sentence_to_index_mapping = {}\n",
+    "index_name = 'doc_index.index'\n",
+    "mapping_name = 'sentence_to_index_mapping.json'\n",
+    "index = None\n",
+    "sentence_to_index_mapping = None\n",
     "\n",
-    "# Load the docs into the index\n",
-    "for idx, doc in enumerate(documents):\n",
-    "    sentences = nltk.sent_tokenize(doc)\n",
-    "    sentence_embeddings = model.encode(sentences, convert_to_tensor=True)\n",
-    "    \n",
-    "    print('sentence_embeddings.shape', sentence_embeddings.shape)   \n",
-    "    \n",
-    "    for sentence_idx, embedding in enumerate(sentence_embeddings):\n",
-    "        # Add sentence embedding to the index\n",
-    "        index.add(np.expand_dims(embedding, axis=0))\n",
-    "        \n",
-    "        # Track the mapping between sentence index and its embedding index\n",
-    "        sentence_to_index_mapping[len(sentence_to_index_mapping)] = {\n",
-    "            'document_index': idx,\n",
-    "            'sentence_index': sentence_idx,\n",
-    "            'sentence_text': sentences[sentence_idx]  # Save the actual sentence\n",
-    "        }\n",
-    "    \n",
-    "    print(\"Length of the index:\", index.ntotal)\n",
+    "if os.path.exists(index_name) and os.path.exists(mapping_name):\n",
+    "    index = faiss.read_index(index_name)\n",
+    "    print(f\"Loaded index from {index_name}\")\n",
+    "\n",
+    "    with open(mapping_name, 'r') as mapping_file:\n",
+    "        sentence_to_index_mapping = json.load(mapping_file)\n",
+    "    print(f\"Loaded sentence_to_index_mapping from {mapping_name}\")\n",
+    "else:\n",
+    "    # Populate the index and track the sentence ids and locations\n",
+    "    index = faiss.IndexFlatL2(768)  # Create an index\n",
+    "    # Maintain a mapping between sentence embeddings' index and their original sentences\n",
+    "    sentence_to_index_mapping = {}\n",
+    "\n",
+    "    # Load the docs into the index\n",
+    "    for idx, doc in enumerate(documents):\n",
+    "        sentences = nltk.sent_tokenize(doc)\n",
+    "        sentence_embeddings = model.encode(sentences, convert_to_tensor=True)\n",
+    "\n",
+    "        print('sentence_embeddings.shape', sentence_embeddings.shape)   \n",
+    "\n",
+    "        for sentence_idx, embedding in enumerate(sentence_embeddings):\n",
+    "            # Add sentence embedding to the index\n",
+    "            index.add(np.expand_dims(embedding, axis=0))\n",
+    "\n",
+    "            # Track the mapping between sentence index and its embedding index\n",
+    "            sentence_to_index_mapping[len(sentence_to_index_mapping)] = {\n",
+    "                'document_index': idx,\n",
+    "                'sentence_index': sentence_idx,\n",
+    "                'sentence_text': sentences[sentence_idx]  # Save the actual sentence\n",
+    "            }\n",
+    "\n",
+    "        print(\"Length of the index:\", index.ntotal)\n",
+    "            \n",
+    "    # Save the index and mapping\n",
+    "    faiss.write_index(index, index_name)\n",
+    "    with open(mapping_name, 'w') as mapping_file:\n",
+    "        json.dump(sentence_to_index_mapping, mapping_file)\n",
     "    \n",
     "print(\"Final length of the index:\", index.ntotal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
+   "id": "9f5ab3bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index: None \tReloading index.\n",
+      "index: <faiss.swigfaiss_avx2.IndexFlat; proxy of <Swig Object of type 'faiss::IndexFlat *' at 0x00000198DF943780> >\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the saving and loading of an index\n",
+    "# index_name = 'doc_index.index'\n",
+    "# faiss.write_index(index, index_name)\n",
+    "\n",
+    "# index = None\n",
+    "# print('index:', index, '\\tReloading index.')\n",
+    "# index = faiss.read_index(index_name)\n",
+    "# print('index:', index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "59c82734",
    "metadata": {
     "scrolled": true
@@ -379,39 +418,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{   0: {   'document_index': 0,\n",
-      "           'sentence_index': 0,\n",
-      "           'sentence_text': 'Artificial intelligence (AI) vs. machine learning '\n",
-      "                            '(ML)\\n'\n",
-      "                            'You might hear people use artificial intelligence '\n",
-      "                            '(AI) and machine learning (ML) interchangeably, '\n",
-      "                            'especially when discussing big data, predictive '\n",
-      "                            'analytics, and other digital transformation '\n",
-      "                            'topics.'},\n",
-      "    1: {   'document_index': 0,\n",
-      "           'sentence_index': 1,\n",
-      "           'sentence_text': 'The confusion is understandable as artificial '\n",
-      "                            'intelligence and machine learning are closely '\n",
-      "                            'related.'},\n",
-      "    2: {   'document_index': 0,\n",
-      "           'sentence_index': 2,\n",
-      "           'sentence_text': 'However, these trending technologies differ in '\n",
-      "                            'several ways, including scope, applications, and '\n",
-      "                            'more.'},\n",
-      "    3: {   'document_index': 0,\n",
-      "           'sentence_index': 3,\n",
-      "           'sentence_text': 'Increasingly AI and ML products have proliferated '\n",
-      "                            'as businesses use them to process and analyze '\n",
-      "                            'immense volumes of data, drive better '\n",
-      "                            'decision-making, generate recommendations and '\n",
-      "                            'insights in real time, and create accurate '\n",
-      "                            'forecasts and predictions.'},\n",
-      "    4: {   'document_index': 0,\n",
-      "           'sentence_index': 4,\n",
-      "           'sentence_text': 'So, what exactly is the difference when it comes '\n",
-      "                            'to ML vs. AI, how are ML and AI connected, and '\n",
-      "                            'what do these terms mean in practice for '\n",
-      "                            'organizations today?'}}\n"
+      "{   '0': {   'document_index': '2d28937a-69ae-4fc4-8543-1b9b5498fab2',\n",
+      "             'sentence_index': 0,\n",
+      "             'sentence_text': 'Artificial intelligence (AI) vs. machine '\n",
+      "                              'learning (ML)\\n'\n",
+      "                              'You might hear people use artificial '\n",
+      "                              'intelligence (AI) and machine learning (ML) '\n",
+      "                              'interchangeably, especially when discussing big '\n",
+      "                              'data, predictive analytics, and other digital '\n",
+      "                              'transformation topics.'},\n",
+      "    '1': {   'document_index': '2d28937a-69ae-4fc4-8543-1b9b5498fab2',\n",
+      "             'sentence_index': 1,\n",
+      "             'sentence_text': 'The confusion is understandable as artificial '\n",
+      "                              'intelligence and machine learning are closely '\n",
+      "                              'related.'},\n",
+      "    '10': {   'document_index': '2d28937a-69ae-4fc4-8543-1b9b5498fab2',\n",
+      "              'sentence_index': 10,\n",
+      "              'sentence_text': 'Machine learning is a subset of artificial '\n",
+      "                               'intelligence that automatically enables a '\n",
+      "                               'machine or system to learn and improve from '\n",
+      "                               'experience.'},\n",
+      "    '100': {   'document_index': 'a97167de-a09a-4d43-92a2-efa489a237d7',\n",
+      "               'sentence_index': 15,\n",
+      "               'sentence_text': 'It emphasises an ongoing process of '\n",
+      "                                'interaction and dialogue between cultures.'},\n",
+      "    '101': {   'document_index': 'a97167de-a09a-4d43-92a2-efa489a237d7',\n",
+      "               'sentence_index': 16,\n",
+      "               'sentence_text': '[4][5] This meaning has been promoted to the '\n",
+      "                                'international community by UNESCO, since the '\n",
+      "                                '2001 Universal Declaration on Cultural '\n",
+      "                                'Diversity.'}}\n"
      ]
     }
    ],
