Updating ML Champ files

--- a/SentenceTransformersAndFAISS/ML_CHAMP/QA_Pipeline/QA_Pipeline_Tests.ipynb
+++ b/SentenceTransformersAndFAISS/ML_CHAMP/QA_Pipeline/QA_Pipeline_Tests.ipynb
@@ -60,10 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "5b61f741",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -89,63 +89,36 @@
       "Deleting previous module: ai_project.qa_pipeline.main.analysis_processor\n",
       "Deleting previous module: ai_project.model.model_tasks\n",
       "Called AI_Project.AI_Model.run_preprocessing()...\n",
-      "CSV file already exists at: D:/JupyterPrograms/0-CHAT_GPT/EXPERIMENTS/ML_CHAMP/data/document_index.csv\n",
-      "Loaded existing DataFrame:\n",
       "Loaded index from D:/JupyterPrograms/0-CHAT_GPT/EXPERIMENTS/ML_CHAMP/data/doc_index.index\n",
       "Loaded sentence_to_index_mapping from D:/JupyterPrograms/0-CHAT_GPT/EXPERIMENTS/ML_CHAMP/data/sentence_to_index_mapping.json\n",
       "Final length of the index: 831\n",
-      "[[0.49390543 0.6343142  0.6708108  0.72135675 0.7280188 ]] [[790 787 784  62  63]]\n",
-      "Searching for 790 in sentence_to_index_mapping.\n",
-      "Searching for 787 in sentence_to_index_mapping.\n",
-      "Searching for 784 in sentence_to_index_mapping.\n",
-      "Searching for 62 in sentence_to_index_mapping.\n",
-      "Searching for 63 in sentence_to_index_mapping.\n",
-      "USER QUERY: How is global health affected by climate change?\n",
-      "Most similar prompts to the user query:\n",
-      "\n",
-      "Document Index: ae79310b-1c53-4784-b813-08537e483b7e\t Sentence Index: 22\t Filename: WorldHealthIssues_1.txt\n",
-      "Sentence:\n",
-      "******************************\n",
-      "\tWe are now at a point where climate change is clearly with us, and much more attention needs to be put on minimizing the impacts on global health through adaptation or enhancing resilience.\n",
-      "******************************\n",
-      "\n",
-      "\n",
-      "Document Index: ae79310b-1c53-4784-b813-08537e483b7e\t Sentence Index: 19\t Filename: WorldHealthIssues_1.txt\n",
-      "Sentence:\n",
-      "******************************\n",
-      "\tAs we know from the pandemic, preparedness is key, and we are far from prepared for the health impacts of a warmer climate.\n",
-      "******************************\n",
-      "\n",
-      "\n",
-      "Document Index: ae79310b-1c53-4784-b813-08537e483b7e\t Sentence Index: 16\t Filename: WorldHealthIssues_1.txt\n",
-      "Sentence:\n",
-      "******************************\n",
-      "\tImpact of climate changeA child looks out over a dried up lake\n",
-      "“Climate change is already affecting the health of millions of people all over the world, and more importantly, climate change will worsen throughout this century.\n",
-      "******************************\n",
-      "\n",
-      "\n",
-      "Document Index: ae79310b-1c53-4784-b813-08537e483b7e\t Sentence Index: 20\t Filename: ClimateChange_1.txt\n",
-      "Sentence:\n",
-      "******************************\n",
-      "\tPeople are experiencing climate change in diverse ways\n",
-      "Climate change can affect our health, ability to grow food, housing, safety and work.\n",
-      "******************************\n",
-      "\n",
-      "\n",
-      "Document Index: ae79310b-1c53-4784-b813-08537e483b7e\t Sentence Index: 21\t Filename: ClimateChange_1.txt\n",
-      "Sentence:\n",
-      "******************************\n",
-      "\tSome of us are already more vulnerable to climate impacts, such as people living in small island nations and other developing countries.\n",
-      "******************************\n",
-      "\n",
-      "No new documents were found.  No DataFrame update required.\n"
+      "Running LMM Tests...\n",
+      "CSV file already exists at: D:/JupyterPrograms/0-CHAT_GPT/EXPERIMENTS/ML_CHAMP/data/document_index.csv\n",
+      "Loaded existing DataFrame:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-large-uncased-whole-word-masking-finetuned-squad were not used when initializing BertForQuestionAnswering: ['bert.pooler.dense.weight', 'bert.pooler.dense.bias']\n",
+      "- This IS expected if you are initializing BertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User question: How is global health affected by climate change? \n",
+      "Answer: climate change is already affecting the health of millions of people all over the world\n"
      ]
     }
    ],
    "source": [
     "project = Project(project_name)\n",
-    "preprocessing_command = {\"check_for_new_docs\": True}\n",
+    "preprocessing_command = {}\n",
+    "# preprocessing_command = {\"check_for_new_docs\": True}\n",
     "\n",
     "# Set the command and train from the previous run\n",
     "project.model.run_preprocessing(preprocessing_command)"
