--- a/SentenceTransformersAndFAISS/ML_CHAMP/QA_Pipeline/QA_Pipeline_Tests.ipynb
+++ b/SentenceTransformersAndFAISS/ML_CHAMP/QA_Pipeline/QA_Pipeline_Tests.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "5b61f741",
    "metadata": {
     "scrolled": false
@@ -94,7 +94,8 @@
       "Final length of the index: 831\n",
       "Running LMM Tests...\n",
       "CSV file already exists at: D:/JupyterPrograms/0-CHAT_GPT/EXPERIMENTS/ML_CHAMP/data/document_index.csv\n",
-      "Loaded existing DataFrame:\n"
+      "Loaded existing DataFrame:\n",
+      "most_common_doc_id: e5e9975d-5826-4664-83a7-92115931b302 WorldHealthIssues_1.txt\n"
      ]
     },
     {
@@ -110,6 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
       "User question: How is global health affected by climate change? \n",
       "Answer: climate change is already affecting the health of millions of people all over the world\n"
      ]
