--- a/SentenceTransformersAndFAISS/ML_CHAMP/Q_Explorer.ipynb
+++ b/SentenceTransformersAndFAISS/ML_CHAMP/Q_Explorer.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "30f755ea",
    "metadata": {
     "scrolled": false
@@ -137,7 +137,79 @@
       "Forcing reload of config file...\n",
       "No initial questions found, loaded stored questions.\n",
       "Processing questions.\n",
-      "\t ['What are the main concerns with AI?']\n",
+      "\t ['Could you provide a comprehensive overview of the impact of climate change on global health, considering various aspects and potential implications?', 'How is global health affected by climate change?', 'How will AI help us in the future?', 'What are the main concerns with \n",
+      "NOTE: All methodology types are used as an input context to the final LMM model.\n",
+      "\n",
+      "\n",
+      "There were 1 sentences found out of a possible 50 that were above the threshold of 0.5\n",
+      "\n",
+      "\tThe doc ID, doc name and sentences used for this summary were:\n",
+      "\n",
+      "\t 783fb29b-29b0-4622-9a63-e19ebe0a1f68 WorldHealthIssues_1.txt \n",
+      "\t\t We are now at a point where climate change is clearly with us, and much more attention needs to be put on minimizing the impacts on global health through adaptation or enhancing resilience.\n",
+      "\n",
+      "\n",
+      "METHODOLOGY: Question & FAISS Vector\n",
+      "This methodology submits the user question to the FAISS index to find all of the related sentences within the assigned parameter ranges.  It then uses the question and FAISS sentences as context for the final LMM.\n",
+      "ORIGINAL QUESTION: Could you provide a comprehensive overview of the impact of climate change on global health, considering various aspects and potential implications?\n",
+      "\tProcessing 1 text chunk(s).\n",
+      "\tProcessing tokenized chunk(s).\n",
+      ". - COMPLETED...\n",
+      "\n",
+      "SUMMARIZED RESPONSE: The World Health Organization has announced an ambitious plan to tackle the global warming challenge by 2050. Even in developed countries, the proportion of individuals and small populations experiencing health problems from climate change or the impacts of climate change have \n",
+      "AVERAGE SCORE: 0.8198295022019897 \n",
+      "END OF Question & FAISS Vector METHODOLOGY\n",
+      "\n",
+      "\n",
+      "Generating question statistics...\n",
+      "NOTE: All methodology types are used as an input context to the final LMM model.\n",
+      "\n",
+      "\n",
+      "There were 1 sentences found out of a possible 50 that were above the threshold of 0.5\n",
+      "\n",
+      "\tThe doc ID, doc name and sentences used for this summary were:\n",
+      "\n",
+      "\t 783fb29b-29b0-4622-9a63-e19ebe0a1f68 WorldHealthIssues_1.txt \n",
+      "\t\t We are now at a point where climate change is clearly with us, and much more attention needs to be put on minimizing the impacts on global health through adaptation or enhancing resilience.\n",
+      "\n",
+      "\n",
+      "METHODOLOGY: Question & FAISS Vector\n",
+      "This methodology submits the user question to the FAISS index to find all of the related sentences within the assigned parameter ranges.  It then uses the question and FAISS sentences as context for the final LMM.\n",
+      "ORIGINAL QUESTION: How is global health affected by climate change?\n",
+      "\tProcessing 1 text chunk(s).\n",
+      "\tProcessing tokenized chunk(s).\n",
+      ". - COMPLETED...\n",
+      "\n",
+      "SUMMARIZED RESPONSE: Global food security and food security are two of the world's unique challenges. Achieving these long-term sustainability challenges, through adaptation and adaptation to climate change, will require us to adapt our food systems.\n",
+      "AVERAGE SCORE: 0.48352454903881964 \n",
+      "END OF Question & FAISS Vector METHODOLOGY\n",
+      "\n",
+      "\n",
+      "Generating question statistics...\n",
+      "NOTE: All methodology types are used as an input context to the final LMM model.\n",
+      "\n",
+      "\n",
+      "There were 1 sentences found out of a possible 50 that were above the threshold of 0.5\n",
+      "\n",
+      "\tThe doc ID, doc name and sentences used for this summary were:\n",
+      "\n",
+      "\t 1733c782-c96f-4594-91bc-e331af52112d AI_5.txt \n",
+      "\t\t What will artificial intelligence do to industries and jobs?\n",
+      "\n",
+      "\n",
+      "METHODOLOGY: Question & FAISS Vector\n",
+      "This methodology submits the user question to the FAISS index to find all of the related sentences within the assigned parameter ranges.  It then uses the question and FAISS sentences as context for the final LMM.\n",
+      "ORIGINAL QUESTION: How will AI help us in the future?\n",
+      "\tProcessing 1 text chunk(s).\n",
+      "\tProcessing tokenized chunk(s).\n",
+      ". - COMPLETED...\n",
+      "\n",
+      "SUMMARIZED RESPONSE: Summarize: New Career and Education is a collaboration of 16 start-ups between 14 companies, as well as 18 universities, universities and research institutes. Our aim is to get deep-learning and artificial intelligence into our lives that will help our industry thrive.\n",
+      "AVERAGE SCORE: 0.45639653362242644 \n",
+      "END OF Question & FAISS Vector METHODOLOGY\n",
+      "\n",
+      "\n",
+      "Generating question statistics...\n",
       "NOTE: All methodology types are used as an input context to the final LMM model.\n",
       "\n",
       "\n",
@@ -188,8 +260,111 @@
       "\tProcessing tokenized chunk(s).\n",
       ".. - COMPLETED...\n",
       "\n",
-      "SUMMARIZED RESPONSE:  AI has the potential to be every bit as fraught with risk as prior cases, perhaps more so given the speed of technological progress. Privacy and data security remain critical concerns, as AI applications deal with vast amounts of personal information. The real benefits of AI o\n",
-      "AVERAGE SCORE: 0.8070699355342272 \n",
+      "SUMMARIZED RESPONSE: AI has the potential to be every bit as fraught with risk as previous technologies. Privacy and data security also remain critical concerns, as AI applications deal with vast amounts of personal information. As a General Purpose Technology, AI will affect industries and jobs.\n",
+      "AVERAGE SCORE: 0.6506074276177162 \n",
+      "END OF Question & FAISS Vector METHODOLOGY\n",
+      "\n",
+      "\n",
+      "Generating question statistics...\n",
+      "NOTE: All methodology types are used as an input context to the final LMM model.\n",
+      "\n",
+      "\n",
+      "There were 3 sentences found out of a possible 50 that were above the threshold of 0.5\n",
+      "\n",
+      "\tThe doc ID, doc name and sentences used for this summary were:\n",
+      "\n",
+      "\t 1733c782-c96f-4594-91bc-e331af52112d AI_5.txt \n",
+      "\t\t What will artificial intelligence do to industries and jobs?\n",
+      "\n",
+      "\t 1733c782-c96f-4594-91bc-e331af52112d AI_5.txt \n",
+      "\t\t Will AI transform industries?\n",
+      "\n",
+      "\t 61f06291-5385-4dfb-acda-88f74e955c15 AI_2.txt \n",
+      "\t\t AI applications can\n",
+      "therefore act as an “innovation supercharger.”\n",
+      "Automation and Unemployment\n",
+      "The 2016 White House Report on Artificial Intelligence, Automation,\n",
+      "and the Economy found that increasing automation will threaten\n",
+      "millions of jobs77 an\n",
+      "\n",
+      "\n",
+      "METHODOLOGY: Question & FAISS Vector\n",
+      "This methodology submits the user question to the FAISS index to find all of the related sentences within the assigned parameter ranges.  It then uses the question and FAISS sentences as context for the final LMM.\n",
+      "ORIGINAL QUESTION: How will AI affect skilled labor?\n",
+      "\tProcessing 1 text chunk(s).\n",
+      "\tProcessing tokenized chunk(s).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ". - COMPLETED...\n",
+      "\n",
+      "SUMMARIZED RESPONSE: The 2016 White House Report on Artificial Intelligence, Automation, and the Economy found that increasing automation will threaten millions of jobs. Machines will likely continue to serve as the backbone of US public services and make most of the US labor force obsolete.\n",
+      "AVERAGE SCORE: 0.7220642185130025 \n",
+      "END OF Question & FAISS Vector METHODOLOGY\n",
+      "\n",
+      "\n",
+      "Generating question statistics...\n",
+      "NOTE: All methodology types are used as an input context to the final LMM model.\n",
+      "\n",
+      "\n",
+      "There were 0 sentences found out of a possible 50 that were above the threshold of 0.5\n",
+      "No prompts found.  Updating similarity_threshold to 0.25\n",
+      "\n",
+      "There were 8 sentences found out of a possible 50 that were above the threshold of 0.25\n",
+      "\n",
+      "\tThe doc ID, doc name and sentences used for this summary were:\n",
+      "\n",
+      "\t 1733c782-c96f-4594-91bc-e331af52112d AI_5.txt \n",
+      "\t\t What will artificial intelligence do to industries and jobs?\n",
+      "\n",
+      "\t 61f06291-5385-4dfb-acda-88f74e955c15 AI_2.txt \n",
+      "\t\t By 1960, there were fewer than 3 million.83 If artificial intelligence significantly and permanently reduces demand for human unskilled\n",
+      "labor, and if significant portions of the unskilled labor workforce struggle\n",
+      "38 Artificial Intelligence and Nat\n",
+      "\n",
+      "\t 61f06291-5385-4dfb-acda-88f74e955c15 AI_2.txt \n",
+      "\t\t AI applications can\n",
+      "therefore act as an “innovation supercharger.”\n",
+      "Automation and Unemployment\n",
+      "The 2016 White House Report on Artificial Intelligence, Automation,\n",
+      "and the Economy found that increasing automation will threaten\n",
+      "millions of jobs77 an\n",
+      "\n",
+      "\t 61f06291-5385-4dfb-acda-88f74e955c15 AI_2.txt \n",
+      "\t\t If AI does lead to permanent worker displacement, technologically\n",
+      "advanced countries may face the “Resource Curse” problem, whereby\n",
+      "the owners of productive capital are highly concentrated, and economics and politics become unstable.\n",
+      "\n",
+      "\t 61f06291-5385-4dfb-acda-88f74e955c15 AI_2.txt \n",
+      "\t\t ■ Former U.S. Treasury Secretary Larry Summers has predicted\n",
+      "that advances in AI and related technologies will lead to a dramatic decline in demand for labor such that the United States\n",
+      "“may have a third of men between the ages of 25 and 54 not\n",
+      "wo\n",
+      "\n",
+      "\t 61f06291-5385-4dfb-acda-88f74e955c15 AI_2.txt \n",
+      "\t\t In particular, we analyze\n",
+      "how future progress in AI technology will affect the speed of technological\n",
+      "innovation, and the how increases in automation will affect employment.\n",
+      "\n",
+      "\t 1733c782-c96f-4594-91bc-e331af52112d AI_5.txt \n",
+      "\t\t Will AI transform industries?\n",
+      "\n",
+      "\t 00226ddc-431c-4943-8409-2ac0b7dac433 AI_4.txt \n",
+      "\t\t It will also replace many human jobs.\n",
+      "\n",
+      "\n",
+      "METHODOLOGY: Question & FAISS Vector\n",
+      "This methodology submits the user question to the FAISS index to find all of the related sentences within the assigned parameter ranges.  It then uses the question and FAISS sentences as context for the final LMM.\n",
+      "ORIGINAL QUESTION: How will AI affect unskilled labor?\n",
+      "\tProcessing 2 text chunk(s).\n",
+      "\tProcessing tokenized chunk(s).\n",
+      ".. - COMPLETED...\n",
+      "\n",
+      "SUMMARIZED RESPONSE: White House report: Increasing automation will threaten millions of jobs. One million Americans will lose their jobs by 2050, report says. U.S. economy already presents increasing economic challenges, author says.\n",
+      "AVERAGE SCORE: 0.3018593204859679 \n",
       "END OF Question & FAISS Vector METHODOLOGY\n",
       "\n",
       "\n",
@@ -197,10 +372,10 @@
       "Generating overall statistics...\n",
       "\n",
       "HISTORICAL set_tag() method.\n",
-      "\tself.run_id: b55de8d68ebe43b78cacb028482bdf0c\n",
-      "\tself.run_directory: D:\\JupyterPrograms\\0-CHAT_GPT\\EXPERIMENTS\\ML_CHAMP\\QA_Pipeline\\Q_Explorer\\build\\Default\\b55de8d68ebe43b78cacb028482bdf0c\n",
+      "\tself.run_id: 8d319a8f6d8a4deeb9a946ddd043fb46\n",
+      "\tself.run_directory: D:\\JupyterPrograms\\0-CHAT_GPT\\EXPERIMENTS\\ML_CHAMP\\QA_Pipeline\\Q_Explorer\\build\\Default\\8d319a8f6d8a4deeb9a946ddd043fb46\n",
       "Highest Scoring Methodology: Question & FAISS Vector\n",
-      "Average Score: 0.8070699355342272\n",
+      "Average Score: 0.5723802585799871\n",
       "\n",
       "\n",
       "\n",
