--- a/SentenceTransformersAndFAISS/Newsgroups clustering test.ipynb
+++ b/SentenceTransformersAndFAISS/Newsgroups clustering test.ipynb
@@ -1,25 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6280f8e",
+   "cell_type": "markdown",
+   "id": "f3490fad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Newsgroups clustering test\n",
+    "\n",
+    "FROM ChatGPT: https://chatgpt.com/c/676d3364-ed30-8002-8846-9aa1c5c9b87d"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "dcf3ccef",
+   "execution_count": 12,
+   "id": "29d87c6e",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\ProgramData\\Anaconda3\\envs\\graph_env\\lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm, trange\n",
       "D:\\ProgramData\\Anaconda3\\envs\\graph_env\\lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
       "  warnings.warn(\n"
      ]
@@ -33,6 +33,7 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.metrics.cluster import homogeneity_completeness_v_measure\n",
     "from sentence_transformers import SentenceTransformer\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -45,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6915f67b",
+   "id": "46b457a3",
    "metadata": {
     "scrolled": true
    },
@@ -223,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d5bff3fd",
+   "id": "fe8f81b6",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08d91ed2",
+   "id": "0d5c283d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a74bf1a6",
+   "id": "c307786f",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3bd6d741",
+   "id": "07f4100e",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e3916274",
+   "id": "4ce10d7b",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8a76d49f",
+   "id": "19184c40",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b12c9bbf",
+   "id": "25a36c62",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "017a38e0",
+   "id": "9c2dbcf8",
    "metadata": {},
    "outputs": [
     {
@@ -613,8 +614,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "4217c2d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>cluster_4</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top_level</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>comp</th>\n",
+       "      <td>312</td>\n",
+       "      <td>1</td>\n",
+       "      <td>64</td>\n",
+       "      <td>4514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rec</th>\n",
+       "      <td>1861</td>\n",
+       "      <td>1884</td>\n",
+       "      <td>173</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sci</th>\n",
+       "      <td>2283</td>\n",
+       "      <td>1</td>\n",
+       "      <td>901</td>\n",
+       "      <td>767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>talk</th>\n",
+       "      <td>285</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2919</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "cluster_4     0     1     2     3\n",
+       "top_level                        \n",
+       "comp        312     1    64  4514\n",
+       "rec        1861  1884   173    61\n",
+       "sci        2283     1   901   767\n",
+       "talk        285     7  2919    42"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df_filtered['top_level'], df_filtered['cluster_4'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ad0e4cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homogeneity: 0.5018612931301193\n",
+      "Completeness: 0.5207988170112788\n",
+      "V-measure: 0.5111547134262988\n"
+     ]
+    }
+   ],
+   "source": [
+    "h, c, v = homogeneity_completeness_v_measure(\n",
+    "    df_filtered['top_level'], \n",
+    "    df_filtered['cluster_4']\n",
+    ")\n",
+    "print(\"Homogeneity:\", h)\n",
+    "print(\"Completeness:\", c)\n",
+    "print(\"V-measure:\", v)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "10694299",
+   "id": "e555e5cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -622,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c69fe47",
+   "id": "3f1c0090",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -630,23 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd81d52f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5539f29a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a356c29",
+   "id": "0ff165c4",
    "metadata": {},
    "outputs": [],
    "source": []
